# Binaural-Jungle

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
design/: 00-design-decisions.md  01-architecture.md
research/: binaural-audio-techniques.md  existing-binaural-vsts.md  jungle-pad-sound-design.md  vst-development-frameworks.md
src/app/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/spatial/: BinauralLSDecoder.cpp  BinauralLSDecoder.h  DecoderMatrix.cpp  DecoderMatrix.h  EarlyReflections.cpp  EarlyReflections.h  HOACoefficients.cpp  HOACoefficients.h  HOAEncoder.cpp  HOAEncoder.h  SOFALoader.cpp  SOFALoader.h  SimpleStereoDecoder.cpp  SimpleStereoDecoder.h
src/dsp/voice/: Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h  OscillatorStack.cpp  OscillatorStack.h  Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
src/gui/: BJFLookAndFeel.cpp  BJFLookAndFeel.h  Controls.cpp  Controls.h  Panels.cpp  Panels.h  SpatialPanner.cpp  SpatialPanner.h  Theme.h
tests/: binaural_ls_decoder_smoke_test.cpp  early_reflections_smoke_test.cpp  filter_smoke_test.cpp  gui_parameters_smoke_test.cpp  hoa_coefficients_smoke_test.cpp  oscillator_stack_smoke_test.cpp  sofa_loader_smoke_test.cpp  spatial_pipeline_smoke_test.cpp  voice_manager_smoke_test.cpp  voice_smoke_test.cpp  voice_spread_smoke_test.cpp
